objects/Hierarchy__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>What it Does? Stores current approval status from the approval process. 
Downstream Impact? N/A 
Which department is owner? IT</description>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Pending L1 Approval</fullName>
                </value>
                <value>
                    <fullName>Pending L2 Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Sub_Status__c</fullName>
        <description>What it Does? Stores approval sub status from the approval process. 
Downstream Impact? N/A 
Which department is owner? IT</description>
        <label>Approval Sub Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>L1 Approved</fullName>
                </value>
                <value>
                    <fullName>L2 Approved</fullName>
                </value>
                <value>
                    <fullName>L1 Rejected</fullName>
                </value>
                <value>
                    <fullName>L2 Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Blackout_Period__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What it Does? Stores whether the current date falls in blackout period or not 
Downstream Impact? N/A 
Which department is owner? IT</description>
        <label>Blackout Period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cost_Center__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>pointer to the parent Cost Center when Domain is Cost Center</description>
        <label>Cost Center</label>
        <referenceTo>Cost_Center__c</referenceTo>
        <relationshipLabel>Hierarchy (Cost Center)</relationshipLabel>
        <relationshipName>Hierarchy_Cost_Center</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Data_Storage__c</fullName>
        <label>Data Storage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Store</fullName>
                </value>
                <value>
                    <fullName>Dynamic Calc and Store</fullName>
                </value>
                <value>
                    <fullName>Dynamic Calc</fullName>
                </value>
                <value>
                    <fullName>Never Share</fullName>
                </value>
                <value>
                    <fullName>Label Only</fullName>
                </value>
                <value>
                    <fullName>Shared</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Domain__c</fullName>
        <description>Data domain</description>
        <label>Domain</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cost Center</fullName>
                    <default>true</default>
                    <label>Cost Center</label>
                </value>
                <value>
                    <fullName>GL Account</fullName>
                </value>
                <value>
                    <fullName>Business Segment</fullName>
                </value>
                <value>
                    <fullName>Region</fullName>
                </value>
                <value>
                    <fullName>Legal Entity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Freez_record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Freez record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>populated when Domain is GL Account</description>
        <label>GL Account</label>
        <referenceTo>GL_Account__c</referenceTo>
        <relationshipLabel>Hierarchy</relationshipLabel>
        <relationshipName>Hierarchy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hierarchy_Description__c</fullName>
        <description>Hierarchy selection related to data domains</description>
        <label>Hierarchy Description</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Domain__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Business Segment Cloud View Hierarchy</fullName>
                </value>
                <value>
                    <fullName>Business Segment Hierarchy</fullName>
                </value>
                <value>
                    <fullName>Business Segment Management Hierarchy</fullName>
                </value>
                <value>
                    <fullName>Business Segment Offer Type Hierarchy</fullName>
                </value>
                <value>
                    <fullName>Function Cost Center GAAP Reporting Hierarchy</fullName>
                </value>
                <value>
                    <fullName>Function Cost Center Management Reporting Hierarchy</fullName>
                </value>
                <value>
                    <fullName>GL Account Financial Statement Rollup Hierarchy</fullName>
                </value>
                <value>
                    <fullName>GL Account Lender Hierarchy</fullName>
                </value>
                <value>
                    <fullName>GL Account Management Hierarchy</fullName>
                </value>
                <value>
                    <fullName>GL Account Management w Proforma Hierarchy</fullName>
                </value>
                <value>
                    <fullName>Legal Entity Hierarchy</fullName>
                </value>
                <value>
                    <fullName>Legal Entity Management Hierarchy</fullName>
                </value>
                <value>
                    <fullName>Planning GL Account GAAP Hierarchy</fullName>
                </value>
                <value>
                    <fullName>Region Hierarchy 1</fullName>
                </value>
                <value>
                    <fullName>Region Hierarchy 2</fullName>
                </value>
                <value>
                    <fullName>Region Hierarchy 3</fullName>
                </value>
                <value>
                    <fullName>Statistical Account Hierarchy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Level1__c</fullName>
        <formula>Parent_Node_ID1__r.Level__c+1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Level Not Used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <description>Denotes hierarchy level</description>
        <label>Level</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Node_Description__c</fullName>
        <description>Child node description</description>
        <label>Node Description</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Node_ID1__c</fullName>
        <label>Node ID</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Node_ID__c</fullName>
        <label>Node ID Not Used</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Node_Type__c</fullName>
        <description>Master data or hierarchy node type</description>
        <label>Node Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Master Data</fullName>
                </value>
                <value>
                    <fullName>Hierarchy Data</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Node_ID1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Use *0* to search</inlineHelpText>
        <label>Parent Node ID</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Hierarchy__c.Node_Type__c</field>
                <operation>equals</operation>
                <value>Hierarchy Data</value>
            </filterItems>
            <filterItems>
                <field>Hierarchy__c.Hierarchy_Description__c</field>
                <operation>equals</operation>
                <valueField>$Source.Hierarchy_Description__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Hierarchy__c</referenceTo>
        <relationshipLabel>Hierarchy</relationshipLabel>
        <relationshipName>Hierarchy_ParentNode</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Node_ID__c</fullName>
        <description>Parent ID</description>
        <label>Parent Node ID Not Used</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Node_Level__c</fullName>
        <formula>Level1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Node Level</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_Hierarchy_Parent_NodeID__c</fullName>
        <formula>Primary_Hierarchy_Parent_Node_ID__r.Node_ID1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Hierarchy Parent NodeID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Hierarchy_Parent_Node_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Use *0* to search</inlineHelpText>
        <label>Primary Hierarchy Parent Node ID</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Hierarchy__c.Domain__c</field>
                <operation>equals</operation>
                <valueField>$Source.Domain__c</valueField>
            </filterItems>
            <filterItems>
                <field>Hierarchy__c.Top_Node_ID1__c</field>
                <operation>equals</operation>
                <valueField>$Source.Primary_Hierarchy_Top_Node_ID2__c</valueField>
            </filterItems>
            <filterItems>
                <field>Hierarchy__c.Node_Type__c</field>
                <operation>equals</operation>
                <value>Hierarchy Data</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Hierarchy__c</referenceTo>
        <relationshipLabel>Hierarchy (Primary Hierarchy Parent Node ID)</relationshipLabel>
        <relationshipName>PHParentNode</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Hierarchy_Top_NodeID__c</fullName>
        <formula>Primary_Hierarchy_Top_Node_ID2__r.Node_ID1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Hierarchy Top NodeID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Hierarchy_Top_Node_ID1__c</fullName>
        <formula>Primary_Hierarchy_Parent_Node_ID__r.Top_Node_ID1__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Hierarchy Top Node ID Not Used</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Hierarchy_Top_Node_ID2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Use *0* to search</inlineHelpText>
        <label>Primary Hierarchy Top Node ID</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Hierarchy__c.Hierarchy_Description__c</field>
                <operation>notEqual</operation>
                <valueField>$Source.Hierarchy_Description__c</valueField>
            </filterItems>
            <filterItems>
                <field>Hierarchy__c.Level__c</field>
                <operation>equals</operation>
                <value>1</value>
            </filterItems>
            <filterItems>
                <field>Hierarchy__c.Node_Type__c</field>
                <operation>equals</operation>
                <value>Hierarchy Data</value>
            </filterItems>
            <filterItems>
                <field>Hierarchy__c.Domain__c</field>
                <operation>equals</operation>
                <valueField>$Source.Domain__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Hierarchy__c</referenceTo>
        <relationshipLabel>Hierarchy (Primary Hierarchy Top Node ID)</relationshipLabel>
        <relationshipName>Hierarchy_TOPNodeID</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Hierarchy_Top_Node_ID__c</fullName>
        <formula>Primary_Hierarchy_Parent_Node_ID__r.Top_Node_ID1__r.Node_ID1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Hierarchy Top Node ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                    <default>true</default>
                    <label>Inactive</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Top_Node_ID1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Top Node ID</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Hierarchy__c.Hierarchy_Description__c</field>
                <operation>equals</operation>
                <valueField>$Source.Hierarchy_Description__c</valueField>
            </filterItems>
            <filterItems>
                <field>Hierarchy__c.Level__c</field>
                <operation>equals</operation>
                <value>1</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Hierarchy__c</referenceTo>
        <relationshipLabel>Hierarchy (Top Node ID)</relationshipLabel>
        <relationshipName>Hierarchy_TopNode</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Top_Node_ID__c</fullName>
        <description>Top node of hierarchy</description>
        <label>Top Node ID not Used</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Hierarchy_ID1__c</fullName>
        <formula>Top_Node_ID1__r.Node_ID1__c   + Node_ID1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Hierarchy ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Hierarchy_ID__c</fullName>
        <description>Combination of Top Node ID, Parent Node ID, and Node ID</description>
        <label>Unique Hierarchy ID Not Used</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_ID__c</fullName>
        <externalId>true</externalId>
        <label>Unique ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X18_Digit_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 Digit ID</label>
        <type>Text</type>
    </fields>
    <label>Hierarchy</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Hierarchy_Description__c</columns>
        <columns>Top_Node_ID1__c</columns>
        <columns>Domain__c</columns>
        <columns>Node_ID1__c</columns>
        <columns>Node_Description__c</columns>
        <columns>Node_Type__c</columns>
        <columns>Parent_Node_ID1__c</columns>
        <columns>Level__c</columns>
        <columns>Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CCHierarchyUnmapped</fullName>
        <columns>NAME</columns>
        <columns>Domain__c</columns>
        <columns>Unique_ID__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Domain__c</field>
            <operation>equals</operation>
            <value>Cost Center</value>
        </filters>
        <filters>
            <field>Node_Type__c</field>
            <operation>equals</operation>
            <value>Master Data</value>
        </filters>
        <filters>
            <field>Cost_Center__c</field>
            <operation>equals</operation>
        </filters>
        <label>CC Hierarchy - Unmapped</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Fianance_MDM_L1_Approval_Hierarchy</fullName>
        <filterScope>Queue</filterScope>
        <label>Finance MDM L1 Approval</label>
        <queue>Finance_MDM_L1_Approval</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Finance_MDM_CORP_FPA_Hierarchy</fullName>
        <filterScope>Queue</filterScope>
        <label>Finance MDM CORP FPA</label>
        <queue>Finance_MDM_CORP_FPA</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Finance_MDM_Finance_Accounting_Hierarchy</fullName>
        <filterScope>Queue</filterScope>
        <label>Finance MDM Finance Accounting</label>
        <queue>Finance_MDM_Finance_Accounting</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Finance_MDM_Finance_Controller_Hierarchy</fullName>
        <filterScope>Queue</filterScope>
        <label>Finance MDM Finance Controller</label>
        <queue>Finance_MDM_Finance_Controller</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Finance_MDM_L2_Approval_Hierarchy</fullName>
        <filterScope>Queue</filterScope>
        <label>Finance MDM L2 Approval</label>
        <queue>Finance_MDM_L2_Approval</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Finance_MDM_L3_Approval_Hierarchy</fullName>
        <filterScope>Queue</filterScope>
        <label>Finance MDM L3 Approval</label>
        <queue>Finance_MDM_L3_Approval</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Finance_MDM_Revenue_Controller_Hierarchy</fullName>
        <filterScope>Queue</filterScope>
        <label>Finance MDM Revenue Controller</label>
        <queue>Finance_MDM_Revenue_Controller</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>GLHierarchyUnmapped</fullName>
        <columns>NAME</columns>
        <columns>Domain__c</columns>
        <columns>Unique_ID__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Domain__c</field>
            <operation>equals</operation>
            <value>GL Account</value>
        </filters>
        <filters>
            <field>Node_Type__c</field>
            <operation>equals</operation>
            <value>Master Data</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>12/10/2018 12:00 AM</value>
        </filters>
        <label>AL Account Hierarchy - Unmapped</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>SFDC Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hierarchy</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Freez_record</fullName>
        <active>true</active>
        <errorConditionFormula>AND(!$User.BypassValidationRules__c, ISCHANGED(Node_ID1__c),Freez_record__c = true)</errorConditionFormula>
        <errorDisplayField>Node_ID1__c</errorDisplayField>
        <errorMessage>You can&apos;t change the Node ID.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Primary_Hierarchy_Top_Node_ID_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>AND(!$User.BypassValidationRules__c, OR( ISCHANGED( Primary_Hierarchy_Top_Node_ID2__c ), ISCHANGED( Data_Storage__c )), Primary_Hierarchy_Top_Node_ID2__c != null,  ISPICKVAL(Data_Storage__c , &apos;Store&apos;) )</errorConditionFormula>
        <errorDisplayField>Data_Storage__c</errorDisplayField>
        <errorMessage>Data Storage cannot be set as &apos;Store&apos;</errorMessage>
    </validationRules>
</CustomObject>